feat: Implement OTP password reset, update profile/addresses, and full English translation

--- a/src/Frontend/index.html
+++ b/src/Frontend/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ShoppeClone - Mua sắm online giá tốt nhất</title>
+    <title>ShoppeClone - Best Online Shopping Experience</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
@@ -72,7 +72,7 @@
                 <!-- Search -->
                 <div class="flex-1 max-w-2xl mx-8">
                     <div class="relative">
-                        <input type="text" placeholder="Tìm kiếm hàng triệu sản phẩm..."
+                        <input type="text" placeholder="Search for millions of products..."
                             class="w-full p-4 pl-12 pr-16 rounded-full border-2 border-gray-200 focus:border-purple-400 focus:outline-none text-lg shadow-lg">
                         <i
                             class="fas fa-search absolute left-5 top-1/2 transform -translate-y-1/2 text-gray-400 text-xl"></i>
@@ -100,7 +100,7 @@
                     <!-- 🔐 ĐÃ LOGIN -->
                     <div id="userNav" class="hidden flex items-center space-x-3">
                         <div class="flex items-center space-x-2 cursor-pointer">
-                            <a href="test.html" class="flex items-center space-x-2 cursor-pointer">
+                            <a href="profile.html" class="flex items-center space-x-2 cursor-pointer">
                                 <i class="fas fa-user-circle text-2xl text-gray-700"></i>
                             </a>
 
@@ -109,7 +109,7 @@
 
                         <button onclick="logout()"
                             class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded-full font-semibold text-sm transition">
-                            Đăng xuất
+                            Logout
                         </button>
                     </div>
 
@@ -122,7 +122,7 @@
                 <!-- Logout button riêng -->
                 <button onclick="logout()" id="logoutBtn"
                     class="hidden bg-red-500 hover:bg-red-600 text-white px-6 py-2 rounded-full font-semibold text-sm ml-2 transition-all">
-                    <i class="fas fa-sign-out-alt mr-2"></i>Đăng xuất
+                    <i class="fas fa-sign-out-alt mr-2"></i>Logout
                 </button>
 
             </div>
@@ -135,14 +135,14 @@
         <div class="max-w-7xl mx-auto px-4 text-center">
             <div class="flex items-center justify-center space-x-4 mb-4">
                 <i class="fas fa-bolt text-2xl"></i>
-                <h2 class="text-2xl md:text-3xl font-bold">FLASH SALE 50% - CHỈ HÔM NAY!</h2>
+                <h2 class="text-2xl md:text-3xl font-bold">FLASH SALE 50% - TODAY ONLY!</h2>
                 <i class="fas fa-clock text-2xl"></i>
             </div>
             <div class="flex items-center justify-center space-x-6 text-lg">
                 <span>00<i class="fas fa-colon"></i>45<i class="fas fa-colon"></i>23</span>
                 <a href="#products"
-                    class="bg-white text-purple-500 px-8 py-3 rounded-full font-bold hover:shadow-xl transform hover:-translate-y-1 transition-all">MUA
-                    NGAY</a>
+                    class="bg-white text-purple-500 px-8 py-3 rounded-full font-bold hover:shadow-xl transform hover:-translate-y-1 transition-all">BUY
+                    NOW</a>
             </div>
         </div>
     </section>
@@ -151,12 +151,12 @@
     <main class="max-w-7xl mx-auto px-4 pb-12">
         <!-- Categories -->
         <section class="mb-12">
-            <h2 class="text-3xl font-bold text-gray-800 mb-8">Danh mục nổi bật</h2>
+            <h2 class="text-3xl font-bold text-gray-800 mb-8">Featured Categories</h2>
             <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-6 gap-4">
                 <div
                     class="bg-white p-6 rounded-2xl shadow-lg hover:shadow-2xl transform hover:-translate-y-2 transition-all text-center">
                     <i class="fas fa-mobile-alt text-4xl text-purple-500 mb-4"></i>
-                    <h3 class="font-semibold text-gray-800">Điện thoại</h3>
+                    <h3 class="font-semibold text-gray-800">Phones</h3>
                 </div>
                 <div
                     class="bg-white p-6 rounded-2xl shadow-lg hover:shadow-2xl transform hover:-translate-y-2 transition-all text-center">
@@ -166,22 +166,22 @@
                 <div
                     class="bg-white p-6 rounded-2xl shadow-lg hover:shadow-2xl transform hover:-translate-y-2 transition-all text-center">
                     <i class="fas fa-headphones text-4xl text-purple-500 mb-4"></i>
-                    <h3 class="font-semibold text-gray-800">Tai nghe</h3>
+                    <h3 class="font-semibold text-gray-800">Headphones</h3>
                 </div>
                 <div
                     class="bg-white p-6 rounded-2xl shadow-lg hover:shadow-2xl transform hover:-translate-y-2 transition-all text-center">
                     <i class="fas fa-tshirt text-4xl text-purple-500 mb-4"></i>
-                    <h3 class="font-semibold text-gray-800">Thời trang</h3>
+                    <h3 class="font-semibold text-gray-800">Fashion</h3>
                 </div>
                 <div
                     class="bg-white p-6 rounded-2xl shadow-lg hover:shadow-2xl transform hover:-translate-y-2 transition-all text-center">
                     <i class="fas fa-home text-4xl text-purple-500 mb-4"></i>
-                    <h3 class="font-semibold text-gray-800">Nhà cửa</h3>
+                    <h3 class="font-semibold text-gray-800">Home & Living</h3>
                 </div>
                 <div
                     class="bg-white p-6 rounded-2xl shadow-lg hover:shadow-2xl transform hover:-translate-y-2 transition-all text-center">
                     <i class="fas fa-gamepad text-4xl text-purple-500 mb-4"></i>
-                    <h3 class="font-semibold text-gray-800">Game</h3>
+                    <h3 class="font-semibold text-gray-800">Gaming</h3>
                 </div>
             </div>
         </section>
@@ -189,8 +189,8 @@
         <!-- Featured Products -->
         <section id="products">
             <div class="flex justify-between items-center mb-8">
-                <h2 class="text-3xl font-bold text-gray-800">Sản phẩm nổi bật</h2>
-                <a href="#" class="text-purple-500 font-semibold hover:text-purple-600">Xem tất cả →</a>
+                <h2 class="text-3xl font-bold text-gray-800">Featured Products</h2>
+                <a href="#" class="text-purple-500 font-semibold hover:text-purple-600">View All →</a>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
                 <!-- Product Card 1 -->
@@ -220,7 +220,7 @@
                         </div>
                         <button onclick="addToCart('iPhone 15 Pro')"
                             class="w-full bg-gradient-to-r from-purple-500 to-purple-600 hover:from-purple-600 hover:to-purple-700 text-white py-3 px-6 rounded-xl font-bold shadow-lg transform hover:-translate-y-1 transition-all">
-                            <i class="fas fa-shopping-cart mr-2"></i>Thêm vào giỏ
+                            <i class="fas fa-shopping-cart mr-2"></i>Add to Cart
                         </button>
                     </div>
                 </div>
@@ -248,7 +248,7 @@
                         </div>
                         <button onclick="addToCart('MacBook Air M2')"
                             class="w-full bg-gradient-to-r from-purple-500 to-purple-600 hover:from-purple-600 hover:to-purple-700 text-white py-3 px-6 rounded-xl font-bold shadow-lg transform hover:-translate-y-1 transition-all">
-                            <i class="fas fa-shopping-cart mr-2"></i>Thêm vào giỏ
+                            <i class="fas fa-shopping-cart mr-2"></i>Add to Cart
                         </button>
                     </div>
                 </div>
@@ -275,7 +275,7 @@
                         </div>
                         <button onclick="addToCart('Apple Watch')"
                             class="w-full bg-gradient-to-r from-purple-500 to-purple-600 hover:from-purple-600 hover:to-purple-700 text-white py-3 px-6 rounded-xl font-bold shadow-lg transform hover:-translate-y-1 transition-all">
-                            <i class="fas fa-shopping-cart mr-2"></i>Thêm vào giỏ
+                            <i class="fas fa-shopping-cart mr-2"></i>Add to Cart
                         </button>
                     </div>
                 </div>
@@ -298,7 +298,7 @@
                         </div>
                         <button onclick="addToCart('AirPods Pro')"
                             class="w-full bg-gradient-to-r from-purple-500 to-purple-600 hover:from-purple-600 hover:to-purple-700 text-white py-3 px-6 rounded-xl font-bold shadow-lg transform hover:-translate-y-1 transition-all">
-                            <i class="fas fa-shopping-cart mr-2"></i>Thêm vào giỏ
+                            <i class="fas fa-shopping-cart mr-2"></i>Add to Cart
                         </button>
                     </div>
                 </div>
@@ -314,7 +314,8 @@
                     <h3 class="text-2xl font-bold mb-6 flex items-center">
                         <i class="fas fa-shopping-bag text-purple-500 mr-3"></i>ShoppeClone
                     </h3>
-                    <p class="text-gray-400 mb-4">Mua sắm online giá tốt nhất với hàng ngàn sản phẩm chính hãng!</p>
+                    <p class="text-gray-400 mb-4">Best online shopping experience with thousands of genuine products!
+                    </p>
                     <div class="flex space-x-4">
                         <i class="fab fa-facebook text-2xl hover:text-purple-500 cursor-pointer"></i>
                         <i class="fab fa-instagram text-2xl hover:text-purple-500 cursor-pointer"></i>
@@ -322,23 +323,23 @@
                     </div>
                 </div>
                 <div>
-                    <h4 class="font-bold mb-4">Khách hàng</h4>
+                    <h4 class="font-bold mb-4">Customers</h4>
                     <ul class="space-y-2 text-gray-400">
-                        <li><a href="#" class="hover:text-white transition-colors">Tài khoản</a></li>
-                        <li><a href="#" class="hover:text-white transition-colors">Lịch sử mua hàng</a></li>
-                        <li><a href="#" class="hover:text-white transition-colors">Chính sách đổi trả</a></li>
+                        <li><a href="#" class="hover:text-white transition-colors">Account</a></li>
+                        <li><a href="#" class="hover:text-white transition-colors">Order History</a></li>
+                        <li><a href="#" class="hover:text-white transition-colors">Return Policy</a></li>
                     </ul>
                 </div>
                 <div>
-                    <h4 class="font-bold mb-4">Hỗ trợ</h4>
+                    <h4 class="font-bold mb-4">Support</h4>
                     <ul class="space-y-2 text-gray-400">
-                        <li><a href="#" class="hover:text-white transition-colors">Hướng dẫn mua hàng</a></li>
-                        <li><a href="#" class="hover:text-white transition-colors">Chính sách bảo mật</a></li>
-                        <li><a href="#" class="hover:text-white transition-colors">Liên hệ</a></li>
+                        <li><a href="#" class="hover:text-white transition-colors">Shopping Guide</a></li>
+                        <li><a href="#" class="hover:text-white transition-colors">Privacy Policy</a></li>
+                        <li><a href="#" class="hover:text-white transition-colors">Contact</a></li>
                     </ul>
                 </div>
                 <div>
-                    <h4 class="font-bold mb-4">Liên hệ</h4>
+                    <h4 class="font-bold mb-4">Contact</h4>
                     <p class="text-gray-400 mb-4">Hotline: 1900 1234</p>
                     <p class="text-gray-400 mb-4">Email: support@shoppeclone.com</p>
                     <div class="flex space-x-2">
@@ -349,7 +350,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-800 mt-12 pt-8 text-center text-gray-400">
-                <p>&copy; 2026 ShoppeClone. Tất cả quyền được bảo lưu.</p>
+                <p>&copy; 2026 ShoppeClone. All rights reserved.</p>
             </div>
         </div>
     </footer>
@@ -359,20 +360,20 @@
         <div class="bg-white rounded-3xl max-w-md w-full max-h-[80vh] overflow-y-auto shadow-2xl">
             <div class="p-6 border-b">
                 <h2 class="text-2xl font-bold text-gray-800 flex items-center">
-                    <i class="fas fa-shopping-cart mr-3 text-purple-500"></i>Giỏ hàng của bạn
+                    <i class="fas fa-shopping-cart mr-3 text-purple-500"></i>Your Cart
                 </h2>
             </div>
             <div id="cartItems" class="p-6">
-                <p class="text-gray-500 text-center py-8">Giỏ hàng trống</p>
+                <p class="text-gray-500 text-center py-8">Cart is empty</p>
             </div>
             <div class="p-6 border-t bg-gray-50 rounded-b-3xl">
                 <div class="flex justify-between text-xl font-bold mb-4">
-                    <span>Tổng:</span>
+                    <span>Total:</span>
                     <span id="cartTotal" class="text-purple-500">0đ</span>
                 </div>
                 <button onclick="checkout()"
                     class="w-full bg-gradient-to-r from-purple-500 to-purple-600 hover:from-purple-600 hover:to-purple-700 text-white py-4 rounded-2xl font-bold text-lg shadow-xl transform hover:-translate-y-1 transition-all">
-                    Thanh toán ngay
+                    Checkout Now
                 </button>
             </div>
         </div>
@@ -394,7 +395,7 @@
             }
 
             if (token && userName) {
-                localStorage.setItem('token', token);
+                localStorage.setItem('accessToken', token);
                 localStorage.setItem('userName', decodeURIComponent(userName));
                 window.history.replaceState({}, document.title, window.location.pathname);
             }
@@ -406,7 +407,7 @@
            2️⃣ UPDATE NAVBAR (CỐT LÕI)
         ================================ */
         function updateNavbar() {
-            const token = localStorage.getItem('token');
+            const token = localStorage.getItem('accessToken');
             const userName = localStorage.getItem('userName') || 'User';
 
             const guestNav = document.getElementById('guestNav');
@@ -416,7 +417,7 @@
             if (token) {
                 guestNav.classList.add('hidden');
                 userNav.classList.remove('hidden');
-                userNameEl.textContent = `Xin chào, ${userName}`;
+                userNameEl.textContent = `Hello, ${userName}`;
             } else {
                 guestNav.classList.remove('hidden');
                 userNav.classList.add('hidden');
@@ -427,8 +428,8 @@
            3️⃣ LOGOUT
         ================================ */
         function logout() {
-            if (confirm('Bạn có chắc muốn đăng xuất?')) {
-                localStorage.removeItem('token');
+            if (confirm('Are you sure you want to logout?')) {
+                localStorage.removeItem('accessToken');
                 localStorage.removeItem('userName');
                 location.reload();
             }
@@ -445,7 +446,7 @@
             else cart.push({ name: productName, quantity: 1, price: 1000000 });
 
             localStorage.setItem('cart', JSON.stringify(cart));
-            alert('✅ Đã thêm vào giỏ hàng!');
+            alert('✅ Added to cart!');
         }
 
         function showCart() {
@@ -453,7 +454,7 @@
         }
 
         function checkout() {
-            alert('✅ Đặt hàng thành công!');
+            alert('✅ Order placed successfully!');
             cart = [];
             localStorage.setItem('cart', JSON.stringify(cart));
             document.getElementById('cartModal').classList.add('hidden');
