--- a/src/Frontend/auth/callback/google.html
+++ b/src/Frontend/auth/callback/google.html
@@ -16,7 +16,7 @@
         })
             .then(res => res.json())
             .then(data => {
-                localStorage.setItem("token", data.accessToken);
+                localStorage.setItem("accessToken", data.accessToken);
                 window.location.href = "/index.html";
             })
             .catch(err => {
