--- a/src/Frontend/login.html
+++ b/src/Frontend/login.html
@@ -61,7 +61,7 @@
                 class="w-full mb-3 bg-transparent border-b-2 border-gray-400 focus:border-purple-600 outline-none py-2">
 
             <div class="text-right mb-6">
-                <a href="#" class="text-sm text-purple-700 hover:underline">
+                <a href="/forgot-password.html" class="text-sm text-purple-700 hover:underline">
                     Forgot password?
                 </a>
             </div>
@@ -124,6 +124,37 @@
     </div>
 
     <script>
+        async function signIn() {
+            const email = document.getElementById('loginEmail').value.trim();
+            const password = document.getElementById('loginPassword').value.trim();
+
+            if (!email || !password) {
+                alert('⚠️ Please enter email and password!');
+                return;
+            }
+
+            try {
+                const response = await fetch('http://localhost:8080/api/auth/login', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ email, password })
+                });
+
+                const data = await response.json();
+
+                if (response.ok) {
+                    localStorage.setItem('accessToken', data.accessToken);
+                    localStorage.setItem('userName', data.user?.fullName || email.split('@')[0]);
+                    window.location.href = '/index.html';
+                } else {
+                    alert('❌ ' + (data.message || 'Login failed'));
+                }
+            } catch (error) {
+                console.error(error);
+                alert('❌ Server connection error');
+            }
+        }
+
         async function googleLogin(event) {
             event.preventDefault();
 
@@ -135,13 +166,13 @@
                 const data = await res.json();
 
                 if (data.authUrl) {
-                    // 🔥 CHUYỂN SANG GOOGLE
+                    // 🔥 SWITCH TO GOOGLE
                     window.location.href = data.authUrl;
                 } else {
-                    alert('❌ Không lấy được Google URL');
+                    alert('❌ Could not get Google URL');
                 }
             } catch (err) {
-                alert('❌ Lỗi Google Login');
+                alert('❌ Google Login Error');
                 console.error(err);
             }
         }
