--- a/src/Frontend/forgot-password.html
+++ b/src/Frontend/forgot-password.html
@@ -172,8 +172,9 @@
                 return;
             }
 
-            if (newPassword.length < 6) {
-                alert('❌ Password must be at least 6 characters!');
+            const strongPasswordRegex = /^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z]).{8,}$/;
+            if (!strongPasswordRegex.test(newPassword)) {
+                alert('❌ Password must be at least 8 characters, include uppercase, lowercase, and number!');
                 return;
             }
 
@@ -239,10 +240,10 @@
             strengthBar.classList.remove('hidden');
 
             let strength = 0;
-            if (password.length >= 6) strength++;
-            if (password.length >= 8) strength++;
-            if (/[A-Z]/.test(password) && /[a-z]/.test(password)) strength++;
-            if (/[0-9]/.test(password) && /[^A-Za-z0-9]/.test(password)) strength++;
+            if (password.length >= 8) strength++; // Base length requirement
+            if (/[a-z]/.test(password)) strength++;
+            if (/[A-Z]/.test(password)) strength++;
+            if (/[0-9]/.test(password)) strength++;
 
             // Reset bars
             bars.forEach(bar => {
@@ -252,7 +253,7 @@
 
             // Set strength
             const colors = ['bg-red-500', 'bg-yellow-500', 'bg-blue-500', 'bg-green-500'];
-            const texts = ['Weak', 'Medium', 'Good', 'Strong'];
+            const texts = ['Very Weak', 'Weak', 'Medium', 'Strong'];
 
             for (let i = 0; i < strength; i++) {
                 bars[i].classList.remove('bg-gray-200');
