--- a/src/Frontend/otp.html
+++ b/src/Frontend/otp.html
@@ -66,37 +66,40 @@
         <!-- Countdown timer -->
         <div class="text-center mb-8 p-4 bg-white/50 rounded-2xl">
             <div id="countdown" class="text-lg font-semibold text-purple-700 mb-1">02:00</div>
-            <p class="text-sm text-gray-600">Didn't receive code? <a href="#" onclick="resendOTP()"
-                    class="text-purple-600 hover:underline font-medium">Resend</a></p>
+            <p class="text-sm text-gray-600">Didn't receive code? <span id="resendLink"
+                    class="text-purple-600 hover:underline font-medium cursor-pointer pointer-events-none text-gray-400">Resend</span>
+            </p>
         </div>
 
-        <!-- OTP Input Fields -->
-        <div class="flex gap-3 justify-center mb-8">
-            <input id="otp1" maxlength="1"
-                class="otp-input w-16 h-16 text-2xl font-bold text-center bg-white rounded-2xl border-2 border-purple-200 focus:border-purple-600 focus:outline-none shadow-lg"
-                type="text">
-            <input id="otp2" maxlength="1"
-                class="otp-input w-16 h-16 text-2xl font-bold text-center bg-white rounded-2xl border-2 border-purple-200 focus:border-purple-600 focus:outline-none shadow-lg"
-                type="text">
-            <input id="otp3" maxlength="1"
-                class="otp-input w-16 h-16 text-2xl font-bold text-center bg-white rounded-2xl border-2 border-purple-200 focus:border-purple-600 focus:outline-none shadow-lg"
-                type="text">
-            <input id="otp4" maxlength="1"
-                class="otp-input w-16 h-16 text-2xl font-bold text-center bg-white rounded-2xl border-2 border-purple-200 focus:border-purple-600 focus:outline-none shadow-lg"
-                type="text">
-            <input id="otp5" maxlength="1"
-                class="otp-input w-16 h-16 text-2xl font-bold text-center bg-white rounded-2xl border-2 border-purple-200 focus:border-purple-600 focus:outline-none shadow-lg"
-                type="text">
-            <input id="otp6" maxlength="1"
-                class="otp-input w-16 h-16 text-2xl font-bold text-center bg-white rounded-2xl border-2 border-purple-200 focus:border-purple-600 focus:outline-none shadow-lg"
-                type="text">
-        </div>
+        <form id="otpForm">
+            <!-- OTP Input Fields -->
+            <div class="flex gap-3 justify-center mb-8">
+                <input id="otp1" maxlength="1" required
+                    class="otp-input w-16 h-16 text-2xl font-bold text-center bg-white rounded-2xl border-2 border-purple-200 focus:border-purple-600 focus:outline-none shadow-lg"
+                    type="text">
+                <input id="otp2" maxlength="1" required
+                    class="otp-input w-16 h-16 text-2xl font-bold text-center bg-white rounded-2xl border-2 border-purple-200 focus:border-purple-600 focus:outline-none shadow-lg"
+                    type="text">
+                <input id="otp3" maxlength="1" required
+                    class="otp-input w-16 h-16 text-2xl font-bold text-center bg-white rounded-2xl border-2 border-purple-200 focus:border-purple-600 focus:outline-none shadow-lg"
+                    type="text">
+                <input id="otp4" maxlength="1" required
+                    class="otp-input w-16 h-16 text-2xl font-bold text-center bg-white rounded-2xl border-2 border-purple-200 focus:border-purple-600 focus:outline-none shadow-lg"
+                    type="text">
+                <input id="otp5" maxlength="1" required
+                    class="otp-input w-16 h-16 text-2xl font-bold text-center bg-white rounded-2xl border-2 border-purple-200 focus:border-purple-600 focus:outline-none shadow-lg"
+                    type="text">
+                <input id="otp6" maxlength="1" required
+                    class="otp-input w-16 h-16 text-2xl font-bold text-center bg-white rounded-2xl border-2 border-purple-200 focus:border-purple-600 focus:outline-none shadow-lg"
+                    type="text">
+            </div>
 
-        <!-- Verify Button -->
-        <button onclick="verifyOTP()"
-            class="w-full py-4 rounded-full bg-gradient-to-r from-purple-600 to-purple-500 text-white font-semibold text-lg shadow-xl hover:shadow-2xl transform hover:-translate-y-1 transition-all duration-200 mb-6">
-            Verify Code
-        </button>
+            <!-- Verify Button -->
+            <button type="submit"
+                class="w-full py-4 rounded-full bg-gradient-to-r from-purple-600 to-purple-500 text-white font-semibold text-lg shadow-xl hover:shadow-2xl transform hover:-translate-y-1 transition-all duration-200 mb-6">
+                Verify Code
+            </button>
+        </form>
 
         <!-- Back to login -->
         <p class="text-center text-sm text-gray-700">
@@ -105,68 +108,171 @@
     </div>
 
     <script>
-        async function verifyOTP() {
-            const otpInputs = ['otp1', 'otp2', 'otp3', 'otp4', 'otp5', 'otp6'];
-            const otp = otpInputs.map(id => document.getElementById(id).value).join('');
+        // Verify OTP
+        document.getElementById('otpForm').addEventListener('submit', async (e) => {
+            e.preventDefault();
 
-            if (!/^\d{6}$/.test(otp)) {
+            const submitBtn = document.querySelector('button[type="submit"]');
+            const originalBtnText = submitBtn.innerText;
+
+            // Disable button to prevent double click
+            submitBtn.disabled = true;
+            submitBtn.innerText = 'Verifying...';
+            submitBtn.classList.add('opacity-70', 'cursor-not-allowed');
+
+            const inputs = document.querySelectorAll('.otp-input');
+            let otp = '';
+            inputs.forEach(input => otp += input.value);
+
+            if (otp.length !== 6) {
                 alert('⚠️ Please enter 6 digits');
+                // Re-enable button
+                submitBtn.disabled = false;
+                submitBtn.innerText = originalBtnText;
+                submitBtn.classList.remove('opacity-70', 'cursor-not-allowed');
                 return;
             }
 
             const email = localStorage.getItem('pendingEmail');
-            const password = localStorage.getItem('pendingPassword'); // 👈 SAVED FROM REGISTER
-
-            if (!email || !password) {
-                alert('❌ Missing login info');
-                return;
-            }
+            const password = localStorage.getItem('pendingPassword');
 
             try {
-                // 1️⃣ VERIFY OTP
-                const verifyRes = await fetch('http://localhost:8080/api/auth/verify-otp', {
+                const response = await fetch('http://localhost:8080/api/auth/verify-otp', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ email, code: otp })
+                    body: JSON.stringify({ email, code: otp }) // Backend expects 'code'
                 });
 
-                if (!verifyRes.ok) {
-                    const err = await verifyRes.json();
-                    alert('❌ ' + (err.message || 'Invalid OTP'));
+                const data = await response.json();
+
+                if (response.ok) {
+                    // alert('✅ Email verified successfully!'); // Optional: Skip alert for smoother flow
+
+                    // Auto Login
+                    if (password) {
+                        const loginRes = await fetch('http://localhost:8080/api/auth/login', {
+                            method: 'POST',
+                            headers: { 'Content-Type': 'application/json' },
+                            body: JSON.stringify({ email, password })
+                        });
+
+                        const loginData = await loginRes.json();
+
+                        if (loginRes.ok) {
+                            localStorage.setItem('accessToken', loginData.accessToken);
+                            localStorage.setItem(
+                                'userName',
+                                loginData.user.fullName || email.split('@')[0]
+                            );
+                            localStorage.removeItem('pendingPassword'); // Clear sensitive data
+                            localStorage.removeItem('pendingEmail'); // Clear sensitive data
+                            window.location.href = 'index.html';
+                        } else {
+                            alert('✅ Verified! Please login manually.');
+                            localStorage.removeItem('pendingEmail'); // Clear sensitive data
+                            localStorage.removeItem('pendingPassword'); // Clear sensitive data
+                            window.location.href = 'login.html';
+                        }
+                    } else {
+                        localStorage.removeItem('pendingEmail'); // Clear sensitive data
+                        localStorage.removeItem('pendingPassword'); // Clear sensitive data
+                        window.location.href = 'login.html';
+                    }
+                } else {
+                    alert('❌ ' + (data.message || 'Verification failed'));
+                    // Re-enable button on error
+                    submitBtn.disabled = false;
+                    submitBtn.innerText = originalBtnText;
+                    submitBtn.classList.remove('opacity-70', 'cursor-not-allowed');
+                }
+            } catch (error) {
+                console.error(error);
+                alert('❌ Server connection error');
+                // Re-enable button on error
+                submitBtn.disabled = false;
+                submitBtn.innerText = originalBtnText;
+                submitBtn.classList.remove('opacity-70', 'cursor-not-allowed');
+            }
+        });
+
+        // Timer Logic
+        let timeLeft = 120; // 2 minutes
+        let timerInterval;
+
+        function updateTimerDisplay() {
+            const minutes = Math.floor(timeLeft / 60);
+            const seconds = timeLeft % 60;
+            const display = `${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
+            const timerEl = document.getElementById('countdown');
+            if (timerEl) timerEl.textContent = display;
+        }
+
+        function startTimer() {
+            if (timerInterval) clearInterval(timerInterval);
+
+            timeLeft = 120;
+            updateTimerDisplay();
+
+            timerInterval = setInterval(() => {
+                if (timeLeft <= 0) {
+                    clearInterval(timerInterval);
+                    updateTimerDisplay(); // Show 00:00
+
+                    const resendLink = document.getElementById('resendLink');
+                    if (resendLink) {
+                        resendLink.classList.remove('pointer-events-none', 'text-gray-400');
+                        resendLink.classList.add('text-purple-600', 'cursor-pointer');
+                        resendLink.onclick = resendOTP;
+                    }
                     return;
                 }
 
-                // 2️⃣ AUTO LOGIN
-                const loginRes = await fetch('http://localhost:8080/api/auth/login', {
+                timeLeft--;
+                updateTimerDisplay();
+            }, 1000);
+        }
+
+        // Auto start when page loads
+        document.addEventListener('DOMContentLoaded', () => {
+            console.log('🚀 OTP Page Loaded - Starting Timer');
+            startTimer();
+        });
+
+        // Resend OTP
+        async function resendOTP() {
+            try {
+                // Disable link again
+                const resendLink = document.getElementById('resendLink');
+                resendLink.classList.add('pointer-events-none', 'text-gray-400');
+                resendLink.classList.remove('text-purple-600', 'cursor-pointer');
+
+                const email = localStorage.getItem('pendingEmail');
+                const response = await fetch('http://localhost:8080/api/auth/send-otp', { // Using send-otp for resend is fine if user exists
+                    // But wait, if user is not active, send-otp might fail?
+                    // Verify logic later.
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ email, password })
+                    body: JSON.stringify({ email })
                 });
 
-                const loginData = await loginRes.json();
-
-                if (loginRes.ok) {
-                    localStorage.setItem('accessToken', loginData.accessToken);
-                    localStorage.setItem(
-                        'userName',
-                        loginData.user.fullName || email.split('@')[0]
-                    );
-
-                    // 🧹 cleanup
-                    localStorage.removeItem('pendingEmail');
-                    localStorage.removeItem('pendingPassword');
-
-                    // 🎉 DONE
-                    window.location.href = '/index.html';
+                if (response.ok) {
+                    alert('✅ New OTP sent!');
+                    timeLeft = 120;
+                    startTimer();
                 } else {
-                    alert('❌ Auto login failed');
+                    const data = await response.json();
+                    alert('❌ ' + (data.message || 'Failed to resend'));
+                    // Re-enable if failed
+                    resendLink.classList.remove('pointer-events-none', 'text-gray-400');
                 }
-
-            } catch (err) {
-                console.error(err);
-                alert('❌ Server connection error');
+            } catch (error) {
+                console.error(error);
+                alert('❌ Connection error');
             }
         }
+
+        // Auto start timer
+        // startTimer() called in DOMContentLoaded above
     </script>
 
 
