Fix Google Login, Profile Update, OTP Expiration, and English Translations

--- a/src/Frontend/forgot-password.html
+++ b/src/Frontend/forgot-password.html
@@ -196,10 +196,10 @@
                     alert('✅ ' + data.message);
                     window.location.href = '/login.html';
                 } else {
-                    alert('❌ ' + (data.message || 'Có lỗi xảy ra'));
+                    alert('❌ ' + (data.message || 'An error occurred'));
                 }
             } catch (error) {
-                alert('❌ Lỗi kết nối server');
+                alert('❌ Server connection error');
                 console.error(error);
             }
         });
