--- a/src/Frontend/token-test.html
+++ b/src/Frontend/token-test.html
@@ -19,7 +19,7 @@
                     <h2 class="font-bold text-lg mb-2">📋 Test Instructions:</h2>
                     <ol class="list-decimal list-inside space-y-2 text-sm">
                         <li>Open DevTools (F12) → Console tab</li>
-                        <li>Chạy: <code class="bg-gray-200 px-2 py-1 rounded">localStorage.clear()</code></li>
+                        <li>Run: <code class="bg-gray-200 px-2 py-1 rounded">localStorage.clear()</code></li>
                         <li>Login with one of the methods</li>
                         <li>Return to this page and click "Check Token"</li>
                     </ol>
